# pytest-explicit

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: release.yaml
src/pytest_explicit/: __init__.py
src/pytest_skipslow/: __init__.py
tests/: test_fast_tests.py  test_slow_tests.py
