[metadata]
description-file = README.md

[flake8]
exclude = .git,__pycache__,dist,build,debian,*.egg,*.egg-info,*.venv,*.archive
max-line-length=100
filename = *.py
max-complexity = 10

[tool:pytest]
markers =
    slow: Marks a slow test
    fast: Marks a fast test
testpaths = tests

[mypy]
files = src/**/*.py
